backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictora-backend
  namespace: predictora
spec:
  replicas: 2
  selector:
    matchLabels:
      app: predictora-backend
  template:
    metadata:
      labels:
        app: predictora-backend
    spec:
      containers:
        - name: backend
          image: docker.io/library/backend:prod
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: predictora-backend
  namespace: predictora
spec:
  selector:
    app: predictora-backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
