api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: predictora-backend
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - api.predictoraai.com
      secretName: api-tls
  rules:
    - host: api.predictoraai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: predictora-backend
                port:
                  number: 8000
