api-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: predictora-backend
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.predictoraai.com`)
      kind: Rule
      services:
        - name: predictora-backend
          port: 8000
  tls:
    certResolver: letsencrypt
